#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSHdf5Input
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-03
2013-03-25 Andy Salnikov
- change file access propery list to enable caching of datasets with large
  chunk sizes

Tag: V00-01-02
2013-03-21 Andy Salnikov
- improve event id generatrion for "end" transitions

Tag: V00-01-01
2013-03-19 Andy Salnikov
- fixing time of event ID in non-event transitions
- fix index of the configuration objects

Tag: V00-01-00
2013-03-18 Andy Salnikov
- Hdf5DatasetIter now reads blocks of 512 objects from time container, 
  helps with performance a lot

Tag: V00-00-01
2013-03-15 Andy Salnikov
- retagging for nightlies

Tag: andy-20130314
2013-03-14 Andy Salnikov
- changes in the instantiation of the EventId

Tag: andy-20121212
2012-12-12 Andy Salnikov
- Hdf5EventId gets two new method (from base interface)

Tag: andy-20120502
2012-05-02 Andy Salnikov
- few changes, work in progress

Tag: andy-20120125
2012-01-25 Andy Salnikov
- first commit to repository, event loop is implemented, but data conversion
  is still needs to be done