@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-04
+2013-03-27 Andy Salnikov
+- add support for EPICS aliases
+
 Tag: V00-01-03
 2013-03-25 Andy Salnikov
 - change file access propery list to enable caching of datasets with large
